harika ve bitti resmen neredeyse